Removed the '(current item)' text from the download button, if the object is not compound Removed the width style from the download options select box to avoid text being cut off

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1324,7 +1324,6 @@ div.download-links-wrapper {
   -webkit-appearance: none; 
   padding: 0 35px 0 12px;
   height: 42px;
-  width: 275px;
   position: relative;
 }
 
